teste de catologo infinitepay

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <menu class="menu">
         <nav class="navegacaoMenu">
             <ul class="listaMenu">
-                <a href="#" class="linkMenu"><li class="itemMenu">Inicio</li></a>
-                <a href="#" class="linkMenu"><li class="itemMenu">Catalogo</li></a>
-                <a href="#" class="linkMenu"><li class="itemMenu">Avisos</li></a>
-                <a href="#" class="linkMenu"><li class="itemMenu">Contato</li></a>
+                <a href="#" class="linkMenu"><li class="itemMenu itemMenuInicio">Inicio</li></a>
+                <a href="https://loja.infinitepay.io/lvo_holding" class="linkMenu" target="_self"><li class="itemMenu itemMenuCatalogo">Catalogo</li></a>
+                <a href="#" class="linkMenu"><li class="itemMenu itemMenuAvisos">Avisos</li></a>
+                <a href="#" class="linkMenu"><li class="itemMenu itemMenuContato">Contato</li></a>
             </ul>
         </nav>
     </menu>
@@ -54,9 +54,13 @@
     <section class="contato">
     </section>
 
-    <footer class="rodape">
-        <a href="https://www.instagram.com/_petity?igsh=cXB4OWkxYTA0bTB4" class="linkSocial"><img src="/imgs/social/instagram.png" alt="logo instagram" class="logoSocial">@Petity</a>
-        <a href="#" class="linkSocial"><img src="/imgs/social/whatsapp.png" alt="logo whatsapp" class="logoSocial">(98) 98277-6911</a>
+    <footer class="">
+        <section class="linksSociais rodape">
+            <a href="https://www.instagram.com/_petity?igsh=cXB4OWkxYTA0bTB4" class="linkSocial"><img src="/imgs/social/instagram.png" alt="logo instagram" class="logoSocial">@_Petity</a>
+            <a href="#" class="linkSocial"><img src="/imgs/social/whatsapp.png" alt="logo whatsapp" class="logoSocial">(98) 98277-6911</a>
+        </section>
+        <hr>
+        <span class="dev">Desenvolvido por LVO TI 👨🏽‍💻</span> 
     </footer>
 </body>
 </html>
