--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Blog sobre a marca Petity, loja de makes e bijuterias.">
     <meta name="keywords" content="bijuterias, makes, petity, ferlane, blog, moda, novidades, tendencias">
-    <title>Petity | Inicio</title>
+    <title>Petity | Contato</title>
     <link rel="shortcut icon" href="/imgs/favicont.png" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/querys/querys.css">
@@ -18,9 +18,9 @@
         <menu class="menu">
             <nav class="navegacaoMenu">
                 <ul class="listaMenu">
+                    <a href="/index.html" class="linkMenu" target="_self"><li class="itemMenu itemMenuContato">Inicio</li></a>
                     <a href="https://loja.infinitepay.io/lvo_holding" class="linkMenu" target="_self"><li class="itemMenu itemMenuCatalogo">Catalogo</li></a>
                     <a href="/paginas/avisos.html" class="linkMenu" target="_self"><li class="itemMenu itemMenuAvisos">Avisos</li></a>
-                    <a href="/paginas/contato.html" class="linkMenu" target="_self"><li class="itemMenu itemMenuContato">Contato</li></a>
                 </ul>
             </nav>
         </menu>
