inclusao de link de dev

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="https://wa.me/5598982776911" class="linkSocial" target="_blank"><img src="/imgs/social/whatsapp.png" alt="logo whatsapp" class="logoSocial">(98) 98277-6911</a>
         </section>
         <hr>
-        <span class="dev">Desenvolvido por LVO TI 👨🏽‍💻</span> 
+        <a href="https://leonardooliveira.vercel.app/" class="dev">Desenvolvido por LVO TI 👨🏽‍💻</a> 
     </footer>
 </body>
 </html>
