--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <menu class="menu">
             <nav class="navegacaoMenu">
                 <ul class="listaMenu">
-                    <a href="https://loja.infinitepay.io/lvo_holding" class="linkMenu" target="_self"><li class="itemMenu itemMenuCatalogo">Catalogo</li></a>
+                    <a href="https://loja.infinitepay.io/ferlanecosta/" class="linkMenu" target="_self"><li class="itemMenu itemMenuCatalogo">Catalogo</li></a>
                     <a href="/paginas/avisos.html" class="linkMenu" target="_self"><li class="itemMenu itemMenuAvisos">Avisos</li></a>
                     <a href="/paginas/contato.html" class="linkMenu" target="_self"><li class="itemMenu itemMenuContato">Contato</li></a>
                 </ul>
