--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <p class="apresentacao__conteudo__texto">
                 "Sua nova obsessão começa aqui."
             </p>
-            <a href="https://loja.infinitepay.io/ferlanecosta" target="_blank" class="button link_previa">Catálogo</a>
-            <a href="https://wa.me/5598982776911" target="_blank" class="button link_previa">Contato</a>
+            <a href="https://loja.infinitepay.io/ferlanecosta" target="_blank" class="button">Catálogo</a>
+            <a href="https://wa.me/5598982776911" target="_blank" class="button">Contato</a>
         </section>
 
     </header>
@@ -74,6 +74,18 @@
                             </ul>
                         </div>
 
+                        <div class="swiper-slide">
+    
+                            <ul class="lista__projetos">
+                                <img src="/imgs/postCard/post4.png" class="previa_projeto" alt="post do instagram">
+                                <span class="item__projetos">Colares Gambel </span>
+                                <span class="buttonLink">
+                                    <a href="https://loja.infinitepay.io/ferlanecosta/dbw9473-chocker" class="link_previa" target="_blank">Compre Agora</a>
+                                    <a href="https://www.instagram.com/p/CnO8URru2Fv/" class="link_previa" target="_blank">Veja no Insta</a>
+                                </span>
+                            </ul>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -108,10 +120,25 @@
                         <a href="https://www.instagram.com/p/CwsChguuqYA/?img_index=1" class="link_previa" target="_blank">Veja no Insta</a>
                     </span>
                 </ul>
+
+                <ul class="listaProjetos">
+                    <img src="/imgs/postCard/post4.png" class="previa_projeto" alt="post do instagram">
+                    <span class="item__projetos">Colares Gambel </span>
+                    <span class="buttonLink">
+                        <a href="https://loja.infinitepay.io/ferlanecosta/dbw9473-chocker" class="link_previa" target="_blank">Compre Agora</a>
+                        <a href="https://www.instagram.com/p/CnO8URru2Fv/" class="link_previa" target="_blank">Veja no Insta<a>
+                    </span>
+                </ul>
+
             </div>
         </section>
 
     </main>
+
+    <footer>
+        <hr>
+        <a href="https://leonardooliveira.vercel.app/" target="_blank" class="rodape">Desenvolvido por LVO TI | CNPJ: 41.243.399/0001-19</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="/script.js"></script>
 </body>
