--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
             </div>
         </section>
 
+        <section class="redesSociais">
+                <div class="redes_links">
+                    <a href="https://www.instagram.com/_petity/" target="_blank"><img src="/imgs/social/instagram.png" alt="Instagram" class="redessociais_links">@_petity</a>
+                    <a href="https://wa.me/5598982776911" target="_blank"><img src="/imgs/social/whatsapp.png" alt="WhatsApp" class="redessociais_links">(98) 98277-6911</a>
+                </div>
+            </section>
     </main>
 
     <footer>
