--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
                             <ul class="lista__projetos">
                                 <img src="/imgs/postCard/post3.png" class="previa_projeto" alt="post do instagram">
-                                <span class="item__projetos">Oculos de Sol</span>
+                                <span class="item__projetos">Óculos de Sol</span>
                                 <span class="buttonLink">
                                     <a href="https://loja.infinitepay.io/ferlanecosta/ouy9061-oculos-de-sol" class="link_previa" target="_blank"><i class="fa-solid fa-cart-shopping"></i> Compre Agora</a>
                                 </span>
@@ -120,7 +120,7 @@
                     
             <ul class="listaProjetos 3">
                 <img src="/imgs/postCard/post3.png" class="previa_projeto" alt="post do instagram">
-                <span class="item__projetos">Oculos de Sol</span>
+                <span class="item__projetos">Óculos de Sol</span>
                 <span class="buttonLink">
                     <a href="#" class="link_previa" target="_blank"><i class="fa-solid fa-cart-shopping"></i> Compre Agora</a>
                 </span>
