--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </p>
             <a href="https://loja.infinitepay.io/ferlanecosta" target="_blank" class="button"><i class="fa-solid fa-store"></i> Catálogo</a>
             <a href="https://www.instagram.com/_petity/" target="_blank" class="button"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a class="btn lightbox-242956425338666 button"><i class="fa-solid fa-clipboard-list"></i> Encomedas</a>
         </section>
 
     </header>
@@ -157,5 +158,21 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="/script.js"></script>
+    <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var JFL_242956425338666 = new JotformFeedback({
+          formId: '242956425338666',
+          base: 'https://form.jotform.com/',
+          windowTitle: 'Encomedas | Petity',
+          backgroundColor: '#865DFF',
+          fontColor: '#FFFFFF',
+          type: 'false',
+          height: 500,
+          width: 700,
+          openOnLoad: false
+        });
+    </script>
+    <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
+    <script>window.jotformEmbedHandler("iframe[id='242956425338666']", "https://form.jotform.com/")</script>
 </body>
 </html>
