alteracao de cor borderbox

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           formId: '242956425338666',
           base: 'https://form.jotform.com/',
           windowTitle: 'Encomedas | Petity',
-          backgroundColor: '#865DFF',
+          backgroundColor: '#dc6262',
           fontColor: '#FFFFFF',
           type: 'false',
           height: 500,
