--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </header>
 
     <main>
+
+        <p id="alerta"></p>
         <section class="projetos" id="projetos">
             <div class="titulo__carrocel">
                 <h2 class="titulo_secao"> Novidades:</h2>
@@ -156,6 +158,8 @@
         <hr>
         <a href="https://leonardooliveira.vercel.app/" target="_blank" class="rodapeConteudo"><i class="fa-solid fa-laptop-code fa-xl"></i><span class="rodapeTexto">Desenvolvido por LVO TI | CNPJ: 41.243.399/0001-19</span></a>
     </footer>
+    <script src="https://static.elfsight.com/platform/platform.js" async></script>
+    <div class="elfsight-app-0b580b56-e344-4e53-9608-2e3446f9eb3c" data-elfsight-app-lazy></div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="/script.js"></script>
     <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
@@ -164,9 +168,9 @@
           formId: '242956425338666',
           base: 'https://form.jotform.com/',
           windowTitle: 'Encomedas | Petity',
-          backgroundColor: '#dc6262',
+          backgroundColor: '#ed5555',
           fontColor: '#FFFFFF',
-          type: 'false',
+          type: '0',
           height: 500,
           width: 700,
           openOnLoad: false
