--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         var JFL_242956425338666 = new JotformFeedback({
           formId: '242956425338666',
           base: 'https://form.jotform.com/',
-          windowTitle: 'Encomedas | Petity',
+          windowTitle: 'Encomendas | Petity',
           backgroundColor: '#ed5555',
           fontColor: '#FFFFFF',
           type: '0',
