--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </p>
             <a href="https://loja.infinitepay.io/ferlanecosta" target="_blank" class="button"><i class="fa-solid fa-store"></i> Catálogo</a>
             <a href="https://www.instagram.com/_petity/" target="_blank" class="button"><i class="fa-brands fa-instagram"></i> Instagram</a>
-            <a class="btn lightbox-242956425338666 button"><i class="fa-solid fa-clipboard-list"></i> Encomedas</a>
+            <a class="btn lightbox-242956425338666 button"><i class="fa-solid fa-clipboard-list"></i> Encomendas</a>
         </section>
 
     </header>
