remoção caracter invalido

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <a href="https://leonardooliveira.vercel.app/" target="_blank" class="rodapeConteudo"><i class="fa-solid fa-laptop-code fa-xl"></i><span class="rodapeTexto">Desenvolvido por LVO TI | CNPJ: 41.243.399/0001-19</span></a>
     </footer>
     <!--<script src="https://static.elfsight.com/platform/platform.js" async></script>
-    <div class="elfsight-app-0b580b56-e344-4e53-9608-2e3446f9eb3c" data-elfsight-app-lazy></div> -->s
+    <div class="elfsight-app-0b580b56-e344-4e53-9608-2e3446f9eb3c" data-elfsight-app-lazy></div> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="/script.js"></script>
     <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
